# flet-barcode-printer

./: .gitignore  README.md  index.html  installer.iss  main.py  pyproject.toml  requirements.txt  run.bat  screenshot-dark.avif  screenshot-light.avif  screenshot.avif
src/: main.py
src/assets/: screenshot-dark.avif  screenshot.avif
